@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5.0.3
+- Fixed bug #30685 (Malformed SOAPClient http header reequest). (Dmitry)
 - Fixed bug #30645 (def. multi result set support for mysql_connect). (Georg)
 - Fixed error handling in mysqli_multi_query. (Georg)
 - Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
